--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: kpts
+name: fernandez2020unsupervised
 channels:
   - pytorch
   - anaconda
@@ -96,8 +96,7 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
-    - index-max==0.0.0
+    - pandas==1.1.3
     - pyntcloud==0.1.2
     - pytz==2020.1
     - trimesh==3.8.11
-prefix: /home/clabrador/apps/miniconda/envs/kpts
